--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>Wherehoused</groupId>
+  <groupId>proj.skillstorm</groupId>
   <artifactId>Wherehoused</artifactId>
   <version>0.0.1</version>
   <name>Skillstorm Project 1</name>
@@ -11,14 +11,6 @@
   </properties>
   
   <dependencies>
-  <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-  	<dependency>
-   	  <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>8.0.29</version>
-  	</dependency>
-
-  
   <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
   	<dependency>
    	  <groupId>mysql</groupId>
